add image and section

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/hardy.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="web-title">Ma<span class="primary-color">r</span>y</h3>
             <ul>
@@ -21,8 +21,17 @@
                 <li><a href="">Blog</a></li>
                 <li><button class="btn-primary">Hire Me</button></li>
             </ul>
-           
         </nav>
+        <div class="banner">
+            <h3 class="banner-greeting"> Hi, I am</h3>
+            <h1 class="banner-title">Mary</h1>
+            <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+            <button type="button" class="btn-primary">Download CV</button>
+            <button type="button" class="btn-primary">Contact</button>
+        </div>
+        <div class="img">
+            <img src="images/hardy.png" alt="">
+        </div>
     </header>
 
     <main>
