--- a/index.html
+++ b/index.html
@@ -23,15 +23,18 @@
             </ul>
         </nav>
         <div class="banner">
-            <h3 class="banner-greeting"> Hi, I am</h3>
-            <h1 class="banner-title">Mary</h1>
-            <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-            <button type="button" class="btn-primary">Download CV</button>
-            <button type="button" class="btn-primary">Contact</button>
+            <div class="banner-content">
+                <h3 class="banner-greeting"> Hi, I am</h3>
+                <h1 class="banner-title">Mary</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+                    behaved moments.</p>
+                <button type="button" class="btn-primary">Download CV</button>
+                <button type="button" class="btn-primary">Contact</button>
+            </div>
+            <img class="banner-profile-pic" src="images/hardy.png" alt="">
         </div>
-        <div class="img">
-            <img src="images/hardy.png" alt="">
-        </div>
+
+
     </header>
 
     <main>
