--- a/index.html
+++ b/index.html
@@ -39,9 +39,14 @@
     </header>
 
     <main>
+
+        <!-- about section  -->
         <section class="about">
             <h3 class="section-title">About Me</h3>
-            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
+                simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                procured exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata.</p>
             <div class="about-info-container">
                 <!-- .about-info*4>h4.info-title+p.info-description -->
                 <div class="about-info">
@@ -60,9 +65,134 @@
                     <h4 class="info-title">From:</h4>
                     <p class="info-description">Los Angeles, USA</p>
                 </div>
-                
             </div>
+        </section>
 
+        <!-- What i do section start -->
+        <section class="What-i-do">
+            <h3 class="section-title">What I do</h3>
+            <p id="what-i-do-section" class="section-description">
+                I have more than 10 years experience building
+                software for clients all over the world. Below is a quick overview of my main technical skill sets and
+                technologies i use. Want to find out more about my experience? Check out my online resume and project
+                portfolio.
+            </p>
+            <div class="skills-container">
+                <!-- .skill*4>img+h3.skills-title+p.skill-description -->
+                <div class="skill-box">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <p class="skill-description">
+                        List skill/technologies
+                        here. You can change the
+                        icon above to any of the
+                        1500+ FontAwesome 5
+                        free icons available.
+                        Aenean commodo ligula
+                        eget dolor.
+                    </p>
+                </div>
+                <div class="skill-box">
+                    <img src="images/icons/react.png" alt="">
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-description">
+                        List skill/technologies
+                        here. You can change the
+                        icon above to any of the
+                        1500+ FontAwesome 5
+                        free icons available.
+                        Aenean commodo ligula
+                        eget dolor.</p>
+                </div>
+                <div class="skill-box">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h3 class="skill-title">Node.js</h3>
+                    <p class="skill-description"> List skill/technologies
+                        here. You can change the
+                        icon above to any of the
+                        1500+ FontAwesome 5
+                        free icons available.
+                        Aenean commodo ligula
+                        eget dolor.</p>
+                </div>
+                <div class="skill-box">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h3 class="skill-title">MongoDB</h3>
+                    <p class="skill-description"> List skill/technologies
+                        here. You can change the
+                        icon above to any of the
+                        1500+ FontAwesome 5
+                        free icons available.
+                        Aenean commodo ligula
+                        eget dolor.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Resume section  -->
+        <section class="">
+            <h3 class="section-title">A summary of My Resume</h3>
+
+            <div class="resume-container">
+                <div class="resume-left-column">
+                    <div class="resume-column-items">
+                        <h3 class="resume-column-title"> My Education</h3>
+                        <h4 class="resume-column-subtitle"> Master in Computer Engineering</h4>
+                        <h6 class="resume-column-mini-subtitle"> Harvard University / 2015 - 2017</h6>
+                        <p class="resume-column-description"> List skill/technologies here. You can change the icon
+                            above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="resume-column-items">
+                        <h4 class="resume-column-subtitle">Master in Computer Engineering </h4>
+                        <h6 class="resume-column-mini-subtitle">Harvard University / 2015 - 2017</h6>
+                        <p class="resume-column-description"> List skill/technologies here. You can change the icon
+                            above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="resume-column-items">
+                        <h4 class="resume-column-subtitle"> Master in Computer Engineering</h4>
+                        <h6 class="resume-column-mini-subtitle">Harvard University / 2015 - 2017</h6>
+                        <p class="resume-column-description"> List skill/technologies here. You can change the icon
+                            above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+
+
+                <div class="resume-right-column">
+                    <div class="resume-column-items">
+                        <h3 class="resume-column-title">My Experience</h3>
+                        <h4 class="resume-column-subtitle">Sr. Font End Developer</h4>
+                        <h6 class="resume-column-mini-subtitle"> Apple Inc / 2020 - Current</h6>
+                        <p class="resume-column-description"> List skill/technologies here. You can change the icon
+                            above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="resume-column-items">
+                        <h4 class="resume-column-subtitle"> Jr. Font End Developer</h4>
+                        <h6 class="resume-column-mini-subtitle"> Dribbble Inc / 2018 - 2022</h6>
+                        <p class="resume-column-description"> List skill/technologies here. You can change the icon
+                            above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                    <div class="resume-column-items">
+                        <h4 class="resume-column-subtitle">HTML Developer</h4>
+                        <h6 class="resume-column-mini-subtitle"> Adobe Inc / 2017 - 2018</h6>
+                        <p class="resume-column-description"> List skill/technologies here. You can change the icon
+                            above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                
+
+            </div>
         </section>
     </main>
 
