--- a/index.html
+++ b/index.html
@@ -191,7 +191,9 @@
                     </div>
                 </div>
                 
-
+            </div>
+            <div class="resume-btn">
+                <button type="button" class="btn-primary">Download CV</button>
             </div>
         </section>
     </main>
