--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
             <h3 class="section-title">A summary of My Resume</h3>
 
             <div class="resume-container">
+
                 <div class="resume-left-column">
                     <div class="resume-column-items">
                         <h3 class="resume-column-title"> My Education</h3>
@@ -149,9 +150,9 @@
                     <div class="resume-column-items">
                         <h4 class="resume-column-subtitle">Master in Computer Engineering </h4>
                         <h6 class="resume-column-mini-subtitle">Harvard University / 2015 - 2017</h6>
-                        <p class="resume-column-description"> List skill/technologies here. You can change the icon
-                            above
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                        <p class="resume-column-description"> 
+                            List skill/technologies here. You can change the icon
+                            above to any of the 1500+ FontAwesome 5 free icons available. Aenean
                             commodo ligula eget dolor.</p>
                     </div>
                     <hr>
@@ -159,8 +160,7 @@
                         <h4 class="resume-column-subtitle"> Master in Computer Engineering</h4>
                         <h6 class="resume-column-mini-subtitle">Harvard University / 2015 - 2017</h6>
                         <p class="resume-column-description"> List skill/technologies here. You can change the icon
-                            above
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            aboveto any of the 1500+ FontAwesome 5 free icons available. Aenean
                             commodo ligula eget dolor.</p>
                     </div>
                 </div>
