--- a/index.html
+++ b/index.html
@@ -135,22 +135,22 @@
 
             <div class="resume-container">
 
-                <div class="resume-left-column">
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+
                     <div class="resume-column-items">
-                        <h3 class="resume-column-title"> My Education</h3>
                         <h4 class="resume-column-subtitle"> Master in Computer Engineering</h4>
                         <h6 class="resume-column-mini-subtitle"> Harvard University / 2015 - 2017</h6>
                         <p class="resume-column-description"> List skill/technologies here. You can change the icon
                             above
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean
                             commodo ligula eget dolor.</p>
-
                     </div>
                     <hr>
                     <div class="resume-column-items">
                         <h4 class="resume-column-subtitle">Master in Computer Engineering </h4>
                         <h6 class="resume-column-mini-subtitle">Harvard University / 2015 - 2017</h6>
-                        <p class="resume-column-description"> 
+                        <p class="resume-column-description">
                             List skill/technologies here. You can change the icon
                             above to any of the 1500+ FontAwesome 5 free icons available. Aenean
                             commodo ligula eget dolor.</p>
@@ -166,15 +166,15 @@
                 </div>
 
 
-                <div class="resume-right-column">
+                <div class="resume-column">
                     <div class="resume-column-items">
                         <h3 class="resume-column-title">My Experience</h3>
                         <h4 class="resume-column-subtitle">Sr. Font End Developer</h4>
                         <h6 class="resume-column-mini-subtitle"> Apple Inc / 2020 - Current</h6>
-                        <p class="resume-column-description"> List skill/technologies here. You can change the icon
-                            above
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
-                            commodo ligula eget dolor.</p>
+                        <p class="resume-column-description">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ Font Awesome
+                            5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                     <hr>
                     <div class="resume-column-items">
