--- a/index.html
+++ b/index.html
@@ -138,63 +138,68 @@
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Education</h3>
 
-                    <div class="resume-column-items">
-                        <h4 class="resume-column-subtitle"> Master in Computer Engineering</h4>
-                        <h6 class="resume-column-mini-subtitle"> Harvard University / 2015 - 2017</h6>
-                        <p class="resume-column-description"> List skill/technologies here. You can change the icon
+                    <div class="resume-item">
+                        <h2 class="resume-item-title"> Master in Computer Engineering</h2>
+                        <h6 class="resume-item-institute"> Harvard University / 2015 - 2017</h6>
+                        <p class="resume-item-description"> List skill/technologies here. You can change the icon
                             above
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean
                             commodo ligula eget dolor.</p>
                     </div>
                     <hr>
-                    <div class="resume-column-items">
-                        <h4 class="resume-column-subtitle">Master in Computer Engineering </h4>
-                        <h6 class="resume-column-mini-subtitle">Harvard University / 2015 - 2017</h6>
-                        <p class="resume-column-description">
-                            List skill/technologies here. You can change the icon
-                            above to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                    <div class="resume-item">
+                        <h2 class="resume-item-title"> Master in Computer Engineering</h2>
+                        <h6 class="resume-item-institute"> Harvard University / 2015 - 2017</h6>
+                        <p class="resume-item-description"> List skill/technologies here. You can change the icon
+                            above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
                             commodo ligula eget dolor.</p>
                     </div>
                     <hr>
-                    <div class="resume-column-items">
-                        <h4 class="resume-column-subtitle"> Master in Computer Engineering</h4>
-                        <h6 class="resume-column-mini-subtitle">Harvard University / 2015 - 2017</h6>
-                        <p class="resume-column-description"> List skill/technologies here. You can change the icon
-                            aboveto any of the 1500+ FontAwesome 5 free icons available. Aenean
+                    <div class="resume-item">
+                        <h2 class="resume-item-title"> Master in Computer Engineering</h2>
+                        <h6 class="resume-item-institute"> Harvard University / 2015 - 2017</h6>
+                        <p class="resume-item-description"> List skill/technologies here. You can change the icon
+                            above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
                             commodo ligula eget dolor.</p>
                     </div>
                 </div>
 
 
                 <div class="resume-column">
-                    <div class="resume-column-items">
-                        <h3 class="resume-column-title">My Experience</h3>
-                        <h4 class="resume-column-subtitle">Sr. Font End Developer</h4>
-                        <h6 class="resume-column-mini-subtitle"> Apple Inc / 2020 - Current</h6>
-                        <p class="resume-column-description">
-                            List skill/technologies here. You can change the icon above to any of the 1500+ Font Awesome
-                            5 free icons available. Aenean commodo ligula eget dolor.
-                        </p>
-                    </div>
-                    <hr>
-                    <div class="resume-column-items">
-                        <h4 class="resume-column-subtitle"> Jr. Font End Developer</h4>
-                        <h6 class="resume-column-mini-subtitle"> Dribbble Inc / 2018 - 2022</h6>
-                        <p class="resume-column-description"> List skill/technologies here. You can change the icon
+                    <h3 class="resume-column-title">My Experience</h3>
+
+                    <div class="resume-item">
+                        <h2 class="resume-item-title"> Master in Computer Engineering</h2>
+                        <h6 class="resume-item-institute"> Harvard University / 2015 - 2017</h6>
+                        <p class="resume-item-description"> List skill/technologies here. You can change the icon
                             above
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean
                             commodo ligula eget dolor.</p>
                     </div>
                     <hr>
-                    <div class="resume-column-items">
-                        <h4 class="resume-column-subtitle">HTML Developer</h4>
-                        <h6 class="resume-column-mini-subtitle"> Adobe Inc / 2017 - 2018</h6>
-                        <p class="resume-column-description"> List skill/technologies here. You can change the icon
+                    <div class="resume-item">
+                        <h2 class="resume-item-title"> Master in Computer Engineering</h2>
+                        <h6 class="resume-item-institute"> Harvard University / 2015 - 2017</h6>
+                        <p class="resume-item-description"> List skill/technologies here. You can change the icon
+                            above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean
+                            commodo ligula eget dolor.</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h2 class="resume-item-title"> Master in Computer Engineering</h2>
+                        <h6 class="resume-item-institute"> Harvard University / 2015 - 2017</h6>
+                        <p class="resume-item-description"> List skill/technologies here. You can change the icon
                             above
                             to any of the 1500+ FontAwesome 5 free icons available. Aenean
                             commodo ligula eget dolor.</p>
                     </div>
                 </div>
+
+
+                
 
             </div>
             <div class="resume-btn">
