--- a/index.html
+++ b/index.html
@@ -131,10 +131,12 @@
 
         <!-- Resume section  -->
         <section class="">
-            <h3 class="section-title">A summary of My Resume</h3>
+
+
+            <h3 class="section-title">A Summary of My Resume</h3>
+
 
             <div class="resume-container">
-
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Education</h3>
 
@@ -169,7 +171,6 @@
 
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Experience</h3>
-
                     <div class="resume-item">
                         <h2 class="resume-item-title"> Master in Computer Engineering</h2>
                         <h6 class="resume-item-institute"> Harvard University / 2015 - 2017</h6>
@@ -199,23 +200,14 @@
                 </div>
 
 
-                
+
 
             </div>
-            <div class="resume-btn">
+            <div class="download-cv">
                 <button type="button" class="btn-primary">Download CV</button>
             </div>
         </section>
     </main>
-
-
-
-
-
-
-
-
-
 
     <footer>
 
