--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <div class="footer-column">
             <h3 class="section-title">Lets Connect</h3>
             <p class="section-description">
@@ -223,6 +223,15 @@
         </div>
         <div class="footer-column">
             <h3 class="section-title">Let's Message Me</h3>
+            <form class="contact" action="">
+                <input type="text" placeholder="Your Name">
+                <input type="email" placeholder="Your Email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                
+                <!-- div.b
+                <input type="submit" class="btn-primary" value="Submit"> -->
+                <input type="submit" value="Submit" class="btn-primary">
+            </form>
         </div>
     </footer>
 </body>
