--- a/index.html
+++ b/index.html
@@ -222,14 +222,11 @@
             </div>
         </div>
         <div class="footer-column">
-            <h3 class="section-title">Let's Message Me</h3>
+            <h3 class="section-title">Let's Message Me Right Now</h3>
             <form class="contact" action="">
                 <input type="text" placeholder="Your Name">
                 <input type="email" placeholder="Your Email">
                 <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
-                
-                <!-- div.b
-                <input type="submit" class="btn-primary" value="Submit"> -->
                 <input type="submit" value="Submit" class="btn-primary">
             </form>
         </div>
