--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@
         </section>
 
 
+
+
         <!-- What i do section start -->
-        <section class="What-i-do">
+        <section class="what-i-do">
             <h3 class="section-title">What I do</h3>
-            <p id="what-i-do-section" class="section-description">
+            <p id="what-i-do-description" class="section-description">
                 I have more than 10 years experience building
                 software for clients all over the world. Below is a quick overview of my main technical skill sets and
                 technologies i use. Want to find out more about my experience? Check out my online resume and project
@@ -82,7 +84,7 @@
             <div class="skills-container">
                 <div class="skill-box">
                     <img src="images/icons/js.png" alt="">
-                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <h3 class="skill-title">JavaScript</h3>
                     <p class="skill-description">
                         List skill/technologies
                         here. You can change the
@@ -133,8 +135,7 @@
 
 
         <!-- Resume section  -->
-        <section class="">
-
+        <section class="resume">
             <h3 class="section-title">A Summary of My Resume</h3>
 
             <div class="resume-container">
@@ -201,7 +202,7 @@
                 </div>
             </div>
             <div class="download-cv">
-                <button type="button" class="btn-primary"><i class="fa-solid fa-download"></i>Download CV</button>
+                <button type="button" class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
     </main>
@@ -224,10 +225,10 @@
         <div class="footer-column">
             <h3 class="section-title">Let's Message Me Right Now</h3>
             <form class="contact" action="">
-                <input type="text" placeholder="Your Name">
-                <input type="email" placeholder="Your Email">
+                <input type="text" placeholder="Your Name" class="name">
+                <input type="email" placeholder="Your Email" class="email">
                 <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
-                <input type="submit" value="Submit" class="btn-primary">
+                <div class="submit"><input type="submit" value="Submit" class="btn-primary"></div>
             </form>
         </div>
     </footer>
